# scrapers

./: README.md
car_logos/: .gitignore  cars.py  pyproject.toml
car_logos/tests/: test_scrape_car_logos.py
data/: metaphors.json
metaphors/: run.sh  scrapy.cfg
metaphors/metaphors/: items.py  pipelines.py  settings.py
metaphors/metaphors/spiders/: metaphor_spider.py
poems/: run.sh  scrapy.cfg
poems/poems/: items.py  pipelines.py  settings.py
poems/poems/spiders/: poems_spider.py
seattle_parcels/: .gitignore  Makefile  README.md  get_grid.js  get_list_data.cjs  get_parcel_list.cjs  index.js  package-lock.json  package.json  pyproject.toml
seattle_parcels/notebooks/: explore_initial_data.ipynb
seattle_parcels/src/: add_parcel_info.js  filter_points.js  get_grid.js  get_parcel_images.js  get_parcel_list.cjs  get_property_reports.js  to_geojson.js  utils.js
