[tool.poetry]
name = "scrape_car_logos"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spatula = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
